Revision history for perl distribution Mojolicious-Plugin-AssetPack

2.07 Not Released
  - Add RollupJs->add_global();

2.06 2018-09-02T22:25:13+0200
 - Fix deprecated coffee-script@1.12.7: CoffeeScript on NPM has moved to coffeescript
 - Fix RollupJs pipe compatible with new rollupjs #138

2.05 2018-08-01T14:19:35+0800
 - Fix s///r is not supported in older Perls #136
 - Fix Favicon rendering of manifest and browserconfig
 - Add Asset::renderer() for dynamic assets
 - Add fallback for serving assets with wrong checksum
 - Renamed Asset::renderer() to tag_for()

2.04 2018-07-19T17:39:06+0800
 - Add support for generating manifest with Favicon pipe
 - Marked AssetPack::tag_for() as deprecated
 - Removed support for Mojolicious::Plugin::AssetPack::Backcompat

2.03 2018-04-26T10:22:06+0200
 - Ensure asset is processed when calling processed
 - Update favicon generator URL to use https
 - Set higher inactivity timeout for favicon generator

2.02 2018-01-28T13:12:59+0100
 - Add EXPERIMENTAL support for fetching assets from helpers

2.01 2017-11-06T13:02:45+0100
 - Up version number to try to fix pause indexing issues
 - NOTE: 2.00 was a mistake. There are no major changes

2.00 2017-10-29T10:08:37+0800
 - Fix RollupJs package name #130
 - load_module() confess on error
 - Removed EXPERIMENTAL Reloader pipe
 - Removed EXPERIMENTAL clone() method in AssetPack::Asset

1.47 2017-10-14T18:58:55+0200
 - Dropping "original" from assetpack.db

1.46 2017-09-27T21:35:33+0200
 - Add "asset_class" attribute to AssetPack::Store
 - Add rollupjs pipe - https://rollupjs.org/

1.45 2017-06-19T23:49:30+0200
 - Add Developing guide
 - Removed deprecated method end_range() from AssetPack::Asset
 - Removed deprecated method get_chunk() from AssetPack::Asset
 - Removed deprecated method is_range() from AssetPack::Asset
 - Removed deprecated method mtime() from AssetPack::Asset
 - Removed deprecated method start_range() from AssetPack::Asset