@@ -2,6 +2,7 @@ Revision history for perl distribution Mojolicious-Plugin-AssetPack
 
 2.07 Not Released
   - Add RollupJs->add_global();
+  - Add note about Mojolicious::Plugin::AssetPack::Webpack
 
 2.06 2018-09-02T22:25:13+0200
  - Fix deprecated coffee-script@1.12.7: CoffeeScript on NPM has moved to coffeescript
